# LibreVault

./: CMakeLists.txt  README.md  line_count.sh
src/: main.cpp
src/config/: config_representation.cpp  config_representation.h
src/crypt/: aes.cpp  aes.h  base64.cpp  base64.h  encryption.cpp  encryption.h  key_derivation.cpp  key_derivation.h
src/crypt/algo/: aes.cpp  aes.h  blowfish.cpp  blowfish.h  chacha20.cpp  chacha20.h
src/filesystem/: filesystem_handling.cpp  filesystem_handling.h  vault_handling.cpp  vault_handling.h
src/log/: log.h
test/: encryption_test.cpp  key_derivation_test.cpp  parse_test.cpp  test.cpp  vault_operations_test.cpp
